Add support for more SQL dialects and improve tests
Extended SqlGenerator to support Oracle and SQLite dialects, improved dialect detection, and added more reserved keywords. Refactored code for clarity and consistency, including use of final variables and concise enum methods. Updated and expanded unit tests to cover new dialects, reserved keyword handling, identifier quoting, and batch insert logic.